--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 beautifulsoup4
 fake_useragent
-keras; python_version < '3.9'
+keras
 lxml
 matplotlib
 numpy
-opencv-python==4.5.3.56
+opencv-python
 pandas
 pillow
 qiskit
@@ -13,5 +13,5 @@ scikit-fuzzy
 sklearn
 statsmodels
 sympy
-tensorflow; python_version < '3.9'
+tensorflow
 xgboost
